# openfoodfacts-cli

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-06-openfoodfacts-cli.md
docs/superpowers/specs/: 2026-04-06-openfoodfacts-cli-design.md
scripts/: install.sh
skills/openfoodfacts-data-exploration/: SKILL.md
skills/openfoodfacts-product-lookup/: SKILL.md
skills/openfoodfacts-shared/: SKILL.md
src/: cli.rs  client.rs  main.rs  output.rs
src/commands/: facets.rs  mod.rs  products.rs
tests/: facets_list.rs  products_get.rs  products_search.rs
