[package]
name = "openfoodfacts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openfoodfacts"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
assert_cmd = "2"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
